Add exemplo de spark